test/compiler-errors/samples/each-block-destructured-default-before-initialised/_config.js
export default {
	error(assert, err) {
		assert.ok(
			err.message === "Cannot access 'c' before initialization" ||
				err.message === 'c is not defined'
		);
	}
};
